--- a/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/config.json
+++ b/src/pynxtools_spm/nomad/examples/sts/STSExampleWithCustomization/config.json
@@ -347,36 +347,27 @@
           },
           "CIRCUIT[circuit]": ""
         },
-        "current_sensor": {
-          "AMPLIFIER[amplifier]": { "current_gain": "" },
-          "current": {
-            "raw_path": "/Current/Current/value",
-            "@units": "/Current/Current/unit"
-          },
-          "current_calibration": {
-            "calibration_interval": "",
-            "coefficients": {
-              "raw_path": "/Current/Calibration/value",
-              "@units": "/Current/Calibration/unit"
-            }
-          },
-          "current_offset": {
-            "raw_path": "/Current/Offset/value",
-            "@units": "/Current/Offset/unit"
-          },
-          "current_gain": { "raw_path": "/Current/Gain/value" }
-        },
         "independent_controllers": "",
         "measurement_sensors": ""
       },
       "current_sensor": {
         "AMPLIFIER[amplifier]": { "current_gain": "" },
-        "current": { "@units": "" },
-        "current_calibration": {
-          "calibration_interval": { "@units": "" },
-          "coefficients": { "@units": "" }
+        "current": {
+          "raw_path": "/Current/Current/value",
+          "@units": "/Current/Current/unit"
         },
-        "current_offset": { "@units": "" }
+        "current_calibration": {
+          "calibration_interval": "",
+          "coefficients": {
+            "raw_path": "/Current/Calibration/value",
+            "@units": "/Current/Calibration/unit"
+          }
+        },
+        "current_offset": {
+          "raw_path": "/Current/Offset/value",
+          "@units": "/Current/Offset/unit"
+        },
+        "current_gain": { "raw_path": "/Current/Gain/value" }
       },
       "piezo_sensor": {
         "piezo_configuration": {
@@ -404,7 +395,7 @@
                 }
               }
             ],
-            "second_order_correction_N[2nd_order_correction_n]": [
+            "second_order_correction_N[second_order_correction_n]": [
               {
                 "x": {
                   "raw_path": "/Piezo Configuration/2nd order corr X/value",
